--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,9 @@ dependencies {
     // External
     implementation 'com.github.markusfisch:CameraView:1.10.0'
     implementation 'com.github.markusfisch:ScalingImageView:1.4.1'
-    implementation 'com.github.markusfisch:zxing-cpp:v2.2.0.5'
+//    implementation 'com.github.markusfisch:zxing-cpp:v2.2.0.5'
+    implementation("io.github.zxing-cpp:android:2.2.0")
+//    implementation("io.github.zxing-cpp:android:2.3.0-SNAPSHOT")
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
