Working in CameraView

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,14 +65,25 @@ dependencies {
     implementation "com.android.support:preference-v14:$support_version"
 
     // External
-    implementation 'com.github.markusfisch:CameraView:1.10.0'
-    implementation 'com.github.markusfisch:ScalingImageView:1.4.1'
+//    implementation 'com.github.markusfisch:CameraView:1.10.0'
+//    implementation 'com.github.markusfisch:ScalingImageView:1.4.1'
 //    implementation 'com.github.markusfisch:zxing-cpp:v2.2.0.5'
     implementation("io.github.zxing-cpp:android:2.2.0")
 //    implementation("io.github.zxing-cpp:android:2.3.0-SNAPSHOT")
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
+
+
+    // camera
+    implementation("androidx.camera:camera-core:1.4.1")
+    implementation("androidx.camera:camera-view:1.4.1")
+    implementation("androidx.camera:camera-lifecycle:1.4.1")
+    implementation("androidx.camera:camera-camera2:1.4.1")
+
+
+
+    implementation("androidx.appcompat:appcompat:1.7.0")
 
 //    implementation libs.androidx.core.ktx
 //    implementation libs.androidx.lifecycle.runtime.ktx
